--- a/upload_form.html
+++ b/upload_form.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8"/>
     <title>File Upload Form</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/jquery-ui.min.css" rel="stylesheet" />
+
     <link href="css/styles.css" rel="stylesheet" />
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
+    <script src="js/jquery.fileupload.js"></script>
     <script src="js/jquery.knob.min.js"></script>
     <script src="js/upload_script.js"></script>
   </head>
@@ -15,13 +20,20 @@
         <h2 class="centered">Files Upload Form Using Ajax, jQuery Upload Library, jQuery Knob Library</h2>
         <div class="panel panel-primary blue-bg">
           <div class="panel-body">
-            <form name="upload">
-              <div id="drop-area" class="centered">Put Your Files Here or</div>
+            <form name="upload" id="upload-form" method="post" action="loader.php" enctype="multipart/form-data">
+              <div id="drop-area" class="centered">
+                <span>Drop Your Files Here <br /> or</span>
+              </div>
               <span class="input-replace btn btn-primary">Select Files
-                <input type="file" name="upload" class="uploader" multiple/>
+                <input type="file" name="upload" id="uploader" class="uploader" multiple />
               </span>
+              <!--<input type="text" name="loader" class="loader" value="0" />-->
               <!--<input type="submit" class="btn btn-success"/>-->
             </form>
+            <ul id="uploaded-list" class="filelist">
+
+            </ul>
+
           </div>
         </div>
 
